--- a/assets/css/ieu_export_users.css
+++ b/assets/css/ieu_export_users.css
@@ -1,24 +1,25 @@
-.button.ieu-export {
-	background: rgb(135, 22, 38) !important;
-	border-color: rgb(135, 22, 38) !important;
-	color: #fff !important;
-	padding: 0.5em 2rem !important;
-	display: block !important;
-	vertical-align: middle;
-	height: auto !important;
-	font-size: 18px !important;
+.buttons {
+	display: flex;
+	justify-content: start;
 }
 
-.button.ieu-send {
-	background: rgb(38, 187, 24) !important;
-	border-color: rgb(38, 187, 24) !important;
+button {
+	padding: 0.5rem 2rem !important;
 	color: #fff !important;
-	padding: 0.5em 2rem !important;
-	display: block !important;
+	font-size: 16px !important;
 	vertical-align: middle;
 	height: auto !important;
-	font-size: 18px !important;
-	margin: 2rem auto;
+	margin-right: 20px !important;
+}
+
+button.export {
+	background: rgb(0, 49, 98) !important;
+	border-color: rgb(0, 49, 98) !important;
+}
+
+button.export_active {
+	background: rgb(38, 187, 24) !important;
+	border-color: rgb(38, 187, 24) !important;
 }
 
 .results {
